tests/cases/smoke/invalid/class_multi_is.ty
record A {
    x: int
}

record B {
    y: int
}

class C is A, B {
    init var x: int
    init var y: int
}
